turtleart.lessons.turtleart.Main.Flower.scala.error
Source:10: error: illegal start of simple expression
	for (i<- 0 to 7);
                        ^