turtleart.lessons.turtleart.Main.Flower.scala.code
override def run() {
	octogone();
}
def ligne() {
	avance(50);
	droite(45);
}
def octognone();
	for (i<- 0 to 7);
	ligne();